<resources>
    <string name="app_name">Warehouse v1.0</string>

    <string name="push_notification">Welcome to your Warehouse! Please choose activity.</string>
    <string name="action_sync">Sync from online database</string>
    <string name="action_search_item">Search Item</string>

    <string name="title_activity_add_item">Add Item</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_add_item_title">Add Item</string>
    <string name="action_add_item_name">Name</string>
    <string name="action_add_item_description">Description</string>
    <string name="action_add_item_image">Image</string>
    <string name="action_add_item_location_code">Location code</string>
    <string name="action_add_item_button_add">Add Image</string>
    <string name="action_add_item_label_location">Location</string>
    <string name="action_add_item_label_amount">Amount</string>
    <string name="action_add_item_scan_location">Scan existing location code</string>
    <string name="action_add_item_generate_location">Generate location code</string>
    <string name="item_name">Item</string>

    <string name="button_add_existing">Add Existing</string>
    <string name="button_take_photo">Take Photo</string>
    <string name="button_save">Save</string>
    <string name="button_cancle">Cancle</string>
    <string name="button_scan">Scan</string>
    <string name="button_print">Print</string>
    <string name="button_search">Search</string>
    <string name="button_delete">Delete</string>

    <string name="action_scan">Scan QR code</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_scan">Scan QR code</string>
    <string name="title_activity_search">Search items by text or scan a location QR code.</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="action_settings">Settings</string>

</resources>
