<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.solidparts.warehouse.AddItemActivity"
    android:background="#003eff82">

    <TextView android:text="@string/item_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itemName"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:textIsSelectable="false" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:singleLine="true"
        android:layout_below="@+id/itemName"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginTop="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_item_name"
        android:id="@+id/textView3"
        android:textSize="14dp"
        android:layout_alignBottom="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_item_description"
        android:id="@+id/textView4"
        android:textSize="14dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/addImage"
        android:layout_alignLeft="@+id/amount"
        android:layout_alignStart="@+id/amount"
        android:singleLine="true" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/itemImage"
        android:longClickable="true"
        android:background="#dddddd"
        android:layout_below="@+id/button7"
        android:layout_alignParentLeft="true"
        android:onClick="onShowImage"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_take_photo"
        android:id="@+id/addImage"
        android:onClick="onTakePhoto"
        android:textSize="10dp"
        android:layout_alignBottom="@+id/itemImage"
        android:layout_alignRight="@+id/itemImage"
        android:layout_alignEnd="@+id/itemImage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/saveUpdate"
        android:onClick="onSave"
        android:textSize="10dp"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignRight="@+id/qrCodeImage"
        android:layout_alignEnd="@+id/qrCodeImage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancle"
        android:id="@+id/button6"
        android:textSize="10dp"
        android:onClick="onCancle"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/saveUpdate"
        android:layout_toStartOf="@+id/saveUpdate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_existing"
        android:id="@+id/button4"
        android:onClick="onAddExistingImage"
        android:textSize="10dp"
        android:layout_alignBottom="@+id/itemImage"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/qrCodeImage"
        android:background="#ffdddddd"
        android:onClick="onGenerateQRCode"
        android:layout_alignTop="@+id/itemImage"
        android:layout_toRightOf="@+id/itemImage"
        android:layout_toEndOf="@+id/itemImage"
        android:layout_marginLeft="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/button_print"
        android:id="@+id/btn_print"
        android:onClick="onPrint"
        android:textSize="10dp"
        android:layout_alignBottom="@+id/qrCodeImage"
        android:layout_alignLeft="@+id/qrCodeImage"
        android:layout_alignStart="@+id/qrCodeImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_item_label_location"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/location"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:singleLine="true"
        android:layout_below="@+id/label_amount"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_item_scan_location"
        android:id="@+id/button7"
        android:textSize="10dp"
        android:onClick="onScan"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_item_generate_location"
        android:id="@+id/button8"
        android:textSize="10dp"
        android:onClick="onGenerateQRCode"
        android:layout_below="@+id/location"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_item_image"
        android:id="@+id/textView8"
        android:textSize="8dp"
        android:textColor="@android:color/black"
        android:layout_alignTop="@+id/itemImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_item_location_code"
        android:id="@+id/textView9"
        android:layout_alignTop="@+id/qrCodeImage"
        android:layout_alignLeft="@+id/qrCodeImage"
        android:layout_alignStart="@+id/qrCodeImage"
        android:textSize="8dp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_item_label_amount"
        android:id="@+id/label_amount"
        android:textSize="14dp"
        android:layout_alignBottom="@+id/amount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/amount"
        android:inputType="number"
        android:layout_below="@+id/description"
        android:layout_alignLeft="@+id/location"
        android:layout_alignStart="@+id/location"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:id="@+id/remove"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="10dp"
        android:nestedScrollingEnabled="false"
        android:visibility="invisible"
        android:onClick="onRemove" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/fullImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        android:onClick="onHideImage"
        android:layout_alignParentStart="true"
        android:background="@android:color/white" />

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map" />

</RelativeLayout>
